fix styling issues on mobile

--- a/styles/Post.module.scss
+++ b/styles/Post.module.scss
@@ -141,6 +141,16 @@
 
 @media only screen and (max-width: 900px) {
   .title {
-    font-size: 90px;
+    width: 100%;
+    font-size: 60px;
+    padding: 0 10px 10px;
+    margin: 0;
+  }
+
+  .container p,
+  .container ul,
+  .container ol,
+  .container blockquote {
+    padding: 15px 10%;
   }
 }
